@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with items not getting restored when breaking and placing blocks
+
 1.18-5.0.0:
 - First port to 1.18
 
